@@ -150,6 +150,7 @@ Version 1.5.6+svn:
      affected by the [unit_type][advancefrom] clause (observed in
      add-on Invasion_from_the_Unknown from the wesnoth-umc-dev
      trunk) each time advancements were evaluated.
+   * Improved the drawing routine for the ttext class.
 
 Version 1.5.6:
  * Authoring tools:
